// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArrangementsEditor handleComboBoxEvents: updates group name and value correctly with isNavigation false, isTextArrangementID false, and no navigation properties 1`] = `
{
  "name": "so_id",
  "navigationKeyForDescription": "",
  "navigationKeyForId": "",
  "propertyKeyForDescription": "overall_status",
  "propertyKeyForId": "so_id",
  "textArrangement": "TextOnly",
  "value": "overall_status",
}
`;

exports[`ArrangementsEditor handleComboBoxEvents: updates group name and value correctly with isNavigation false, isTextArrangementID false,navigationKeyForId is present, and no navigation properties 1`] = `
{
  "name": "so_id",
  "navigationKeyForDescription": "",
  "navigationKeyForId": "",
  "propertyKeyForDescription": "overall_status",
  "propertyKeyForId": "so_id",
  "textArrangement": "TextOnly",
  "value": "overall_status",
}
`;

exports[`ArrangementsEditor handleComboBoxEvents: updates group name and value correctly with isNavigation false, isTextArrangementID true, navigationKeyForDescription is not present, and navigation property is not present 1`] = `
{
  "name": "approval_status",
  "navigationKeyForDescription": "",
  "navigationKeyForId": "",
  "propertyKeyForDescription": "so_id",
  "propertyKeyForId": "approval_status",
  "textArrangement": "TextOnly",
  "value": "so_id",
}
`;

exports[`ArrangementsEditor handleComboBoxEvents: updates group name and value correctly with isNavigation false, isTextArrangementID true, navigationKeyForDescription is not present, and navigation property present 1`] = `
{
  "name": "to_DeliveryStatus",
  "navigationKeyForDescription": "",
  "navigationKeyForId": "",
  "propertyKeyForDescription": "so_id",
  "propertyKeyForId": "to_DeliveryStatus",
  "textArrangement": "TextOnly",
  "value": "so_id",
}
`;

exports[`ArrangementsEditor handleComboBoxEvents: updates group name and value correctly with isNavigation false, isTextArrangementID true, navigationKeyForDescription is present, and navigation property is not present 1`] = `
{
  "name": "approval_status",
  "navigationKeyForDescription": "Decimals",
  "navigationKeyForId": "",
  "propertyKeyForDescription": "to_Currency",
  "propertyKeyForId": "approval_status",
  "textArrangement": "TextOnly",
  "value": "to_Currency/Decimals",
}
`;

exports[`ArrangementsEditor handleComboBoxEvents: updates group name and value correctly with isNavigation false, isTextArrangementID true, navigationKeyForDescription is present, and navigation property present 1`] = `
{
  "name": "to_DeliveryStatus",
  "navigationKeyForDescription": "Decimals",
  "navigationKeyForId": "",
  "propertyKeyForDescription": "to_Currency",
  "propertyKeyForId": "to_DeliveryStatus",
  "textArrangement": "TextOnly",
  "value": "to_Currency/Decimals",
}
`;

exports[`ArrangementsEditor handleComboBoxEvents: updates group name and value correctly with isNavigation true, isTextArrangementID false, and navigation properties present for both Id and Description 1`] = `
{
  "name": "to_Currency/Currency_Code_Text",
  "navigationKeyForDescription": "Status",
  "navigationKeyForId": "Currency_Code_Text",
  "propertyKeyForDescription": "to_DeliveryStatus",
  "propertyKeyForId": "to_Currency",
  "textArrangement": "TextOnly",
  "value": "to_DeliveryStatus/Status",
}
`;

exports[`ArrangementsEditor handleComboBoxEvents: updates group name and value correctly with isNavigation true, isTextArrangementID false, and navigation properties present for only Description 1`] = `
{
  "name": "approval_status",
  "navigationKeyForDescription": "Currency_Code_Text",
  "navigationKeyForId": "",
  "propertyKeyForDescription": "to_Currency",
  "propertyKeyForId": "approval_status",
  "textArrangement": "TextOnly",
  "value": "to_Currency/Currency_Code_Text",
}
`;

exports[`ArrangementsEditor handleComboBoxEvents: updates group name and value correctly with isNavigation true, isTextArrangementID false, and navigation properties present for only Id 1`] = `
{
  "name": "to_Currency/Currency_Code_Text",
  "navigationKeyForDescription": "",
  "navigationKeyForId": "Currency_Code_Text",
  "propertyKeyForDescription": "approval_status",
  "propertyKeyForId": "to_Currency",
  "textArrangement": "TextOnly",
  "value": "approval_status",
}
`;

exports[`ArrangementsEditor onAfterRendering: should update internal model and refresh combo box model after rendering 1`] = `
[
  {
    "label": "Text First",
    "name": "TextFirst",
  },
  {
    "label": "Text Last",
    "name": "TextLast",
  },
  {
    "label": "Text Only",
    "name": "TextOnly",
  },
  {
    "label": "Text Separate",
    "name": "TextSeparate",
  },
]
`;

exports[`ArrangementsEditor setSelectionKeys: setSelectionKeys method 1`] = `
[MockFunction] {
  "calls": [
    [
      "items",
      {
        "factory": [Function],
        "length": 500,
        "path": "/configuration/propertiesWithNavigation",
        "sorter": [
          constructor {
            "bDescending": true,
            "fnCompare": undefined,
            "fnGroup": [Function],
            "sPath": "category",
            "vGroup": true,
          },
          constructor {
            "bDescending": false,
            "fnCompare": undefined,
            "sPath": "label",
            "vGroup": undefined,
          },
        ],
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`ArrangementsEditor setSelectionKeys: setSelectionKeys method 2`] = `
[MockFunction] {
  "calls": [
    [
      "items",
      {
        "factory": [Function],
        "length": 500,
        "path": "/configuration/propertiesWithNavigation",
        "sorter": [
          constructor {
            "bDescending": true,
            "fnCompare": undefined,
            "fnGroup": [Function],
            "sPath": "category",
            "vGroup": true,
          },
          constructor {
            "bDescending": false,
            "fnCompare": undefined,
            "sPath": "label",
            "vGroup": undefined,
          },
        ],
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`ArrangementsEditor setSelectionKeys: setSelectionKeys method 3`] = `
[MockFunction] {
  "calls": [
    [
      "items",
      {
        "factory": [Function],
        "path": "internal>/",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`ArrangementsEditor setSelectionKeys: setSelectionKeys method for text arrangement 1`] = `
[MockFunction] {
  "calls": [
    [
      "items",
      {
        "factory": [Function],
        "length": 500,
        "path": "/configuration/propertiesWithNavigation",
        "sorter": [
          constructor {
            "bDescending": true,
            "fnCompare": undefined,
            "fnGroup": [Function],
            "sPath": "category",
            "vGroup": true,
          },
          constructor {
            "bDescending": false,
            "fnCompare": undefined,
            "sPath": "label",
            "vGroup": undefined,
          },
        ],
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`ArrangementsEditor setSelectionKeys: setSelectionKeys method for text arrangement 2`] = `
[MockFunction] {
  "calls": [
    [
      "items",
      {
        "factory": [Function],
        "length": 500,
        "path": "/configuration/propertiesWithNavigation",
        "sorter": [
          constructor {
            "bDescending": true,
            "fnCompare": undefined,
            "fnGroup": [Function],
            "sPath": "category",
            "vGroup": true,
          },
          constructor {
            "bDescending": false,
            "fnCompare": undefined,
            "sPath": "label",
            "vGroup": undefined,
          },
        ],
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
